test/correct/EnumChar.hs
main = ( take 10 ['a'..]
       , take 10 ['A', 'C' ..]
       , ['Z', 'Y' .. 'A' ]
       , ['A' .. 'Z']
       )
