test/typeerrors/Heuristics/OrdChr.hs
import Char

main = (ord 65, chr 'a')
